# hpc-tp2

./: CMakeLists.txt  README.md  REPORT.md
src/: Animal.h  Bird.cpp  Bird.h  Dolphin.cpp  Dolphin.h  Fish.cpp  Fish.h  Mammal.cpp  Mammal.h  Ostrich.cpp  Ostrich.h  Penguin.cpp  Penguin.h  Questions.cpp  Zoo.cpp  Zoo.hpp
